<resources>
    <string name="app_name">Firebase</string>
    <string name="login">Login</string>
    <string name="email_input"> Email</string>
    <string name="password_hint">   Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_acc">Don\'t have an account yet? Register here</string>
    <string name="confirm_password_hint">   Confirm Password</string>
    <string name="back_to_login">Already have an account? Login here</string>
    <string name="create_account">Create Account</string>
    <string name="create_acc2">Please fill the input below here</string>
    <string name="full_name">   Full Name</string>
    <string name="register">Register</string>
    <string name="confirm_pass_check">Password is not matching.</string>
    <string name="empty_field">Empty fields are not allowed</string>
    <string name="text_user">User</string>
    <string name="success_signup">Sign up successfully</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget Password</string>
    <string name="email_error">Email can\'\t be empty</string>
    <string name="reset_password">Check your email to reset password</string>
    <string name="channel">Channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tv">Tv</string>
    <string name="title_image">Image</string>
    <string name="title_ads">Ads</string>
    <string name="appId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="addUnitId">ca-app-pub-3940256099942544/9214589741</string>
    <string name="interstitial_ad">Show Interstitial Ad</string>
    <string name="interstitialId">ca-app-pub-3940256099942544/1033173712</string>
</resources>